--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <!-- Botón para reproducir la cadencia -->
     <button id="playCadenceButton">Reproducir Cadencia</button>
+    <button id="toggleNotasButton">Ocultar Notas</button>
+    <div id="notasContainer" style="display: block"></div>
 
     <script>
       const todasLasNotas = ['C4', 'D4', 'E4', 'F4', 'G4', 'A4', 'B4'];
@@ -138,12 +140,16 @@
         const key = document.getElementById('key').value;
         const chords = getCadence(key);
 
+        // Asegúrate de que Tone.js está inicializado
         await Tone.start();
+
+        // Calcula la duración entre acordes basada en el BPM actual
+        const chordDuration = Tone.Time('4n').toSeconds(); // Un cuarto de nota (4n)
 
         let time = 0;
         chords.forEach((chord) => {
           sampler.triggerAttackRelease(chord, '8n', `+${time}`);
-          time += 1;
+          time += chordDuration;
         });
       };
 
@@ -183,6 +189,17 @@
           currentLoop.dispose();
         }
 
+        // Actualiza el DOM con las notas y duraciones
+        const notasContainer = document.getElementById('notasContainer');
+        if (notasContainer) {
+          notasContainer.innerHTML = ''; // Limpia el contenido previo
+          combinacion.forEach(({ nota, duracion }) => {
+            const item = document.createElement('div');
+            item.textContent = `Nota: ${nota}, Duración: ${duracion}`;
+            notasContainer.appendChild(item);
+          });
+        }
+
         // Define el loop
         currentLoop = new Tone.Loop((time) => {
           combinacion.forEach(({ nota, duracion }, i) => {
@@ -199,6 +216,23 @@
         currentLoop.start(0);
 
         console.log('Ritmo en bucle:', combinacion);
+
+        // Oculta el contenedor de notas
+        if (notasContainer) {
+          notasContainer.style.display = 'none';
+        }
+      };
+
+      document.getElementById('toggleNotasButton').onclick = () => {
+        const notasContainer = document.getElementById('notasContainer');
+        if (
+          notasContainer.style.display === 'none' ||
+          !notasContainer.style.display
+        ) {
+          notasContainer.style.display = 'block'; // Muestra el contenedor
+        } else {
+          notasContainer.style.display = 'none'; // Oculta el contenedor
+        }
       };
     </script>
   </body>
