--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Botón para reproducir la cadencia -->
     <button id="playCadenceButton">Reproducir Cadencia</button>
-    <button id="toggleNotasButton">Ocultar Notas</button>
+    <button id="toggleNotasButton">Mostrar notas</button>
     <div id="notasContainer" style="display: block"></div>
     <button id="playDroneButton">Reproducir Drone</button>
     <button id="stopDroneButton">Detener Drone</button>
