--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
     <div id="buttons-container"></div>
 
-    <label for="bpmInput">BPM: </label>
-    <input type="number" id="bpmInput" min="30" max="300" value="120" />
-    <button id="setBpmButton">Establecer BPM</button>
+    <label for="bpmSlider">BPM: <span id="bpmDisplay">120</span></label>
+    <input type="range" id="bpmSlider" min="30" max="300" value="120" />
 
     <!-- Botón para detener todos los sonidos -->
     <button id="stopButton">Detener Sonidos</button>
@@ -341,11 +340,6 @@
         console.log('Combinación generada:', combinacion);
       };
 
-      document.getElementById('setBpmButton').onclick = () => {
-        const bpm = parseInt(document.getElementById('bpmInput').value, 10);
-        Tone.Transport.bpm.value = bpm;
-      };
-
       document.getElementById('stopButton').onclick = () => {
         Tone.Transport.stop();
         Tone.Transport.cancel();
@@ -449,9 +443,6 @@
         }
       };
 
-
-
-      
       const droneSynth = new Tone.PolySynth(Tone.Synth).toDestination();
 
       // Configuración usando .set()
@@ -485,7 +476,7 @@
       droneSynth.connect(delay);
 
       // Ajuste de volumen
-      droneSynth.volume.value = -10;
+      droneSynth.volume.value = -15;
 
       const droneChordIntervals = [0, 4, 7];
       let currentDroneNotes = [];
@@ -537,6 +528,15 @@
           audioContext.suspend(); // Opcional: detiene todo temporalmente
         }
       }
+
+      const bpmSlider = document.getElementById('bpmSlider');
+      const bpmDisplay = document.getElementById('bpmDisplay');
+
+      bpmSlider.addEventListener('input', () => {
+        const bpm = parseInt(bpmSlider.value, 10);
+        bpmDisplay.textContent = bpm;
+        Tone.Transport.bpm.value = bpm;
+      });
 
       document
         .getElementById('playDroneButton')
